@@ -1,3 +1,6 @@
+Alastair S - Tue Mar 29 2005
+	bluecube input fixes. can now be paused with hold.
+
 Alastair S - Tue Mar 22 2005
 	bluecube now in colour for the photo
 
